// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dialog matches snapshot when closed 1`] = `
<body>
  <div />
</body>
`;

exports[`Dialog matches snapshot when open 1`] = `
<body>
  <div
    aria-hidden="true"
  />
  <div
    id="headlessui-portal-root"
  >
    <div
      data-headlessui-portal=""
    >
      <button
        aria-hidden="true"
        data-headlessui-focus-guard="true"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        type="button"
      />
      <div>
        <div
          aria-modal="true"
          class="dialogRoot"
          data-headlessui-state="open"
          data-open=""
          id="headlessui-dialog-:r0:"
          role="dialog"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            class="dialogBackdrop"
            data-headlessui-state="open"
            data-open=""
            style="background-color: rgb(0, 0, 0);"
          />
          <div
            class="dialogOverlay"
          >
            <div
              class="dialogPanel"
              data-headlessui-state="open"
              data-open=""
              id="headlessui-dialog-panel-:r7:"
            >
              <div>
                Dialog content
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-hidden="true"
        data-headlessui-focus-guard="true"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`Dialog matches snapshot with ariaLabel 1`] = `
<body>
  <div />
  <div
    id="headlessui-portal-root"
  >
    <div
      data-headlessui-portal=""
    >
      <button
        aria-hidden="true"
        data-headlessui-focus-guard="true"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        type="button"
      />
      <div>
        <div
          aria-label="Test dialog"
          aria-modal="true"
          class="dialogRoot"
          data-headlessui-state="open"
          data-open=""
          id="headlessui-dialog-:ro:"
          role="dialog"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            class="dialogBackdrop"
            data-headlessui-state="open"
            data-open=""
            style="background-color: rgb(0, 0, 0);"
          />
          <div
            class="dialogOverlay"
          >
            <div
              class="dialogPanel"
              data-headlessui-state="open"
              data-open=""
              id="headlessui-dialog-panel-:rv:"
            >
              <div>
                Dialog content
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-hidden="true"
        data-headlessui-focus-guard="true"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`Dialog matches snapshot with custom backdropColor 1`] = `
<body>
  <div />
  <div
    id="headlessui-portal-root"
  >
    <div
      data-headlessui-portal=""
    >
      <button
        aria-hidden="true"
        data-headlessui-focus-guard="true"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        type="button"
      />
      <div>
        <div
          aria-modal="true"
          class="dialogRoot"
          data-headlessui-state="open"
          data-open=""
          id="headlessui-dialog-:rg:"
          role="dialog"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            class="dialogBackdrop"
            data-headlessui-state="open"
            data-open=""
            style="background-color: rgb(2, 86, 176);"
          />
          <div
            class="dialogOverlay"
          >
            <div
              class="dialogPanel"
              data-headlessui-state="open"
              data-open=""
              id="headlessui-dialog-panel-:rn:"
            >
              <div>
                Dialog content
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-hidden="true"
        data-headlessui-focus-guard="true"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`Dialog matches snapshot with disableAnimation 1`] = `
<body>
  <div />
  <div
    id="headlessui-portal-root"
  >
    <div
      data-headlessui-portal=""
    >
      <button
        aria-hidden="true"
        data-headlessui-focus-guard="true"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        type="button"
      />
      <div>
        <div
          aria-modal="true"
          class="dialogRoot"
          data-headlessui-state="open"
          data-open=""
          id="headlessui-dialog-:r8:"
          role="dialog"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            class="dialogBackdrop"
            data-headlessui-state="open"
            data-open=""
            style="background-color: rgb(0, 0, 0);"
          />
          <div
            class="dialogOverlay"
          >
            <div
              class="dialogPanel"
              data-headlessui-state="open"
              data-open=""
              id="headlessui-dialog-panel-:rf:"
            >
              <div>
                Dialog content
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-hidden="true"
        data-headlessui-focus-guard="true"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        type="button"
      />
    </div>
  </div>
</body>
`;
